...
                            ),
                            tabs: [
                              Tab(
                                text: 'Signup',
                              ),
                              Tab(
                                key: ValueKey('LoginTab_tkoh'),
                                text: 'Login',
                              ),
                            ],
                            controller: _model.tabBarController,
                            onTap: (i) async {
                              [() async {}, () async {}][i]();
...
                            controller: _model.tabBarController,
                            children: [
                              Form(
                                key: _model.formKey,
                                autovalidateMode: AutovalidateMode.disabled,
                                child: Column(
                                  key: ValueKey('Column_mqv2'),
                                  mainAxisSize: MainAxisSize.max,
                                  children: [
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('Signup-Email_3jcf'),
                                        controller:
                                            _model.signupEmailTextController,
                                        focusNode: _model.signupEmailFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.signupEmailTextController',
                                          Duration(milliseconds: 2000),
...
                                            .asValidator(context),
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('Signup-Password_wt4p'),
                                        controller:
                                            _model.signupPasswordTextController,
                                        focusNode:
                                            _model.signupPasswordFocusNode,
                                        autofocus: false,
                                        enabled: true,
...
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey(
                                            'Signup-ConfirmPassword_7kco'),
                                        controller: _model
                                            .signupConfirmPasswordTextController,
                                        focusNode: _model
                                            .signupConfirmPasswordFocusNode,
                                        autofocus: false,
                                        enabled: true,
...
                              Column(
                                mainAxisSize: MainAxisSize.max,
                                children: [
                                  Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('Login-Email_p5vw'),
                                      controller:
                                          _model.loginEmailTextController,
                                      focusNode: _model.loginEmailFocusNode,
                                      onChanged: (_) => EasyDebounce.debounce(
                                        '_model.loginEmailTextController',
                                        Duration(milliseconds: 2000),
...
                              borderRadius: BorderRadius.circular(0.0),
                            ),
                          ),
                        ),
                      if (_model.tabBarCurrentIndex == 0)
                        FFButtonWidget(
                          key: ValueKey('Signup-Button_js59'),
                          onPressed: () async {
                            if (_model.formKey.currentState == null ||
                                !_model.formKey.currentState!.validate()) {
                              return;
                            }
                            GoRouter.of(context).prepareAuthEvent();
...
