...
                                      .update(createUsersRecordData(
                                    photoUrl:
                                        _model.uploadedFileUrl_profilePhoto,
                                  ));
                                },
                                child: Container(
                                  key: ValueKey('Container_cmzu'),
                                  width: 80.0,
                                  height: 80.0,
                                  decoration: BoxDecoration(
                                    color: FlutterFlowTheme.of(context)
                                        .secondaryBackground,
                                    borderRadius: BorderRadius.circular(68.0),
...
                          ],
                        ),
                      ),
                      Container(
                        width: double.infinity,
                        child: TextFormField(
                          key: ValueKey('Onboarding-Name_jtg3'),
                          controller: _model.onboardingNameTextController,
                          focusNode: _model.onboardingNameFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: false,
                          decoration: InputDecoration(
...
                              .asValidator(context),
                        ),
                      ),
                      Container(
                        width: double.infinity,
                        child: TextFormField(
                          key: ValueKey('Onboarding-Email_98ca'),
                          controller: _model.onboardingEmailTextController,
                          focusNode: _model.onboardingEmailFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: false,
                          decoration: InputDecoration(
...
                              .asValidator(context),
                        ),
                      ),
                      Container(
                        width: double.infinity,
                        child: TextFormField(
                          key: ValueKey('Onboarding-Password_8g4i'),
                          controller: _model.onboardingPasswordTextController,
                          focusNode: _model.onboardingPasswordFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: !_model.onboardingPasswordVisibility,
                          decoration: InputDecoration(
...
                        ),
                      ),
                    ].divide(SizedBox(height: 24.0)),
                  ),
                ),
                FFButtonWidget(
                  key: ValueKey('Button_ue3p'),
                  onPressed: () async {
                    await currentUserReference!.update(createUsersRecordData(
                      email: '',
                      displayName: '',
                      photoUrl: '',
                    ));
...
